turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:9: error: not found: value white
  if (getCouleurSol()==white) 
                       ^LangtonsAnt:25: error: not found: value black
  setCouleurBrosse(black)
                   ^LangtonsAnt:31: error: not found: value white
  setCouleurBrosse(white)
                   ^